# skulk

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs  install.sh  opencode.json
.claude/: settings.json
.cubil/backlog/: add-claude-code-project-path-encoding-helper.md  add-json-human-global-cli-flags.md  add-opencode-support.md  add-optional-reason-flag-to-skulk-archive.md  add-skulk-download-command-bring-a-remote-agent-s-branch-and-claude-session-to-a-local-worktree.md  add-skulk-upload-command-transfer-local-branch-and-claude-session-to-a-remote-agent.md  document-output-format-in-config-and-claude-md.md  json-output-for-diff-command.md  json-output-for-gc-command.md  json-output-for-list-command.md  json-output-for-logs-command.md  json-output-for-ship-command.md  json-output-for-status-command.md  json-output-for-wait-command.md  move-skulk-update-out-of-the-config-required-gate.md  relax-agent-name-validation-to-allow-uppercase-underscores-and-slashes.md
.cubil/doing/: fix-opencode-harness-permissions-model-flag-remote-control.md  structured-json-errors-on-stderr.md  (+1 more)
.skulk/: config.toml
src/: agent_ref.rs  config.rs  display.rs  error.rs  inventory.rs  io.rs  main.rs  ssh.rs  testutil.rs  timings.rs  util.rs
tasks/: archive.md  claude-plugin.md  diff-flags.md  diff.md  doctor.md  drop-legacy-config.md  git-log.md  homebrew.md  init-hook.md  list-idle-column.md  new-flags.md  new-prompt-sources.md  opencode-support.md  partial-failure-audit.md  push.md  release-0-2-0.md  remote-control-flag.md  remote-control-idle-death.md  replay.md  restart.md  send-from.md  shell-completions.md  ship-task-integration.md  ship.md  skulk-directory.md  status.md  sweep.md  task-update.md  tasks-format.md  tasks-state-machine.md  transcript.md  wait.md
(+32 files in other folders)
